--- a/src/scss/rdv.scss
+++ b/src/scss/rdv.scss
@@ -153,3 +153,55 @@
         transform: rotate(9deg);
     }
 }
+
+
+@media only screen and (max-width: 768px) {
+    .rdv {
+        background-color: var(--white) !important;
+    }
+
+        .gallery {
+            width: 100%;
+
+            h3 {
+                font-size: 12px;
+                font-family: 'Roboto', sans-serif;
+                color: var(--white);
+                position: relative;
+                top: 8px;
+                left: 8px;
+            }
+
+            .gallery_container {
+                display: grid;
+                grid-template-columns: repeat(3, 120px);
+                grid-template-rows: 120px;
+                gap: 10px;
+                margin: 20px 10px;
+
+                .img {
+                    position: relative !important;
+                    width: 126px;
+                    height: auto;
+                    transform: rotate(0) !important;
+                    left: 0 !important;
+                    top: 0 !important;
+                    right: 0 !important;
+                    bottom: 0 !important;
+
+                    img {
+                        width: 126px;
+                        height: auto;   
+                    }
+
+                    .gallery_desc, .gallery_type {
+                        font-size: 16px;
+                    }
+                }
+            }
+        }
+
+
+
+
+ }
