--- a/src/scss/artistes.scss
+++ b/src/scss/artistes.scss
@@ -5,7 +5,7 @@
     grid-column-gap: 2px;
     grid-row-gap: 2px;
     width: 1290px;
-    margin: 0 auto;
+    margin: 80px auto 0;
 
 
     .child_artiste {
