--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -36,13 +36,40 @@
 }
 
 .sponsors {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
     .logos {
         display: grid;
-        grid-template-columns: repeat(4, auto);
+        grid-template-columns: repeat(4, 250px);
         justify-items: center;
+        gap: 15px 0px;
     }
 
     .layout_sponsor {
         width: 228px;
+    }
+
+    #join {
+        background-color: #D9D9D9;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        text-align: center;
+
+        h4 {
+            color: black;
+            font-size: 20px;
+            font-family: 'Roboto', sans-serif;
+            font-weight: 600;
+            line-height: 30px;
+            word-wrap: break-word;
+        }
+    }
+
+    .text {
+        width: 100%;
     }
 }
