--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -158,7 +158,7 @@
 
             p {
                 color: black;
-                font-size: 20px;
+                font-size: 16px;
                 font-family: Roboto;
                 font-weight: 400;
                 word-wrap: break-word;
@@ -365,7 +365,7 @@
     display: none;
 }
 
-@media only screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     .vertical_bar {
         display: none;
     }
