--- a/src/scss/rdv.scss
+++ b/src/scss/rdv.scss
@@ -3,7 +3,7 @@
 }
 
 .gallery {
-    margin-top: 200px;
+    margin-top: 100px;
 
     background-color: var(--back-rdv);
     position: relative;
@@ -15,7 +15,7 @@
         font-weight: 400;
         color: var(--grey);
         position: absolute;
-        top: -53px;
+        top: -62px;
         left: 90px;
     }
 
@@ -155,7 +155,7 @@
 }
 
 
-@media only screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     .rdv {
         background-color: var(--white) !important;
     }
