--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -470,4 +470,12 @@
         }
     }
 
+
+    .infos_page {
+        margin-bottom: 24px;
+        .content {
+            padding: 8px 18px;
+        }
+    }
+
 }
