--- a/src/scss/rdv.scss
+++ b/src/scss/rdv.scss
@@ -10,18 +10,19 @@
     height: 2000px;
 
     h3 {
-        font-size: 60px;
-        font-family: 'Swomun', serif;
-        font-weight: 400;
+        font-size: 24px;
+        font-family: 'Roboto', sans-serif;
+        font-style: italic;
         color: var(--grey);
         position: absolute;
-        top: -62px;
-        left: 90px;
+        top: 45px;
+        width: 325px;
+        left: 190px;
     }
 
     .gallery_bt_text {
         position: absolute;
-        bottom: 200px;
+        bottom: 55px;
         right: 150px;
         width: 500px;
         text-align: right;
@@ -65,9 +66,9 @@
 
         .gallery_desc {
             position: absolute;
-            left: 50%;
             top: 50%;
-            transform: translateX(-50%) translateY(-50%);
+            width: 100%;
+            height: 50%;
             color: white;
             font-size: 24px;
             font-family: Roboto;
@@ -75,6 +76,8 @@
             font-weight: 600;
             word-wrap: break-word;
             display: none;
+            text-align: center;
+            padding: 0 20px;
         }
 
         .gallery_type {
@@ -95,7 +98,7 @@
     #card-1 {
         position: absolute;
         left: 200px;
-        top: 120px;
+        top: 220px;
         transform: rotate(-16deg);
 
     }
@@ -103,21 +106,21 @@
     #card-2 {
         position: absolute;
         right: 120px;
-        top: 100px;
+        top: 200px;
         transform: rotate(12deg);
     }
 
     #card-3 {
         position: absolute;
         right: 500px;
-        top: 200px;
+        top: 300px;
         z-index: 3;
     }
 
     #card-4 {
         position: absolute;
         left: 300px;
-        top: 450px;
+        top: 550px;
         transform: rotate(9deg);
         z-index: 4;
         position: absolute;
@@ -128,28 +131,28 @@
     #card-5 {
         position: absolute;
         right: 100px;
-        top: 650px;
+        top: 750px;
         transform: rotate(3deg);
     }
 
     #card-6 {
         position: absolute;
         left: 575px;
-        top: 750px;
+        top: 850px;
         transform: rotate(-9deg);
     }
 
     #card-7 {
         position: absolute;
         left: 250px;
-        top: 1200px;
+        top: 1300px;
         transform: rotate(-9deg);
     }
 
     #card-8 {
         position: absolute;
         right: 300px;
-        top: 1250px;
+        top: 1350px;
         transform: rotate(9deg);
     }
 }
@@ -195,19 +198,20 @@
                     }
 
                     .gallery_desc, .gallery_type {
-                        font-size: 16px;
+                        font-size: 10px;
                         width: 100%;
                         padding: 10px;
                     }
 
                     .gallery_desc {
-                        left: 65px;
                         top: 40px;
+                        font-size: 8px;
+                        margin-top: 5px;
+                        text-align: center;
                     }
 
                     .gallery_type {
-                        top: 70px;
-                        left: 70px;
+                        text-align: center;
                     }
                 }
             }
