--- a/src/main.scss
+++ b/src/main.scss
@@ -1,3 +1,4 @@
+@import url('scss/reset.scss');
 @import url('scss/colors.scss');
 @import url('scss/global.scss');
 @import url('scss/header.scss');
