--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: since 2010
+*/
+
 .about {
     width: 1280px;
     margin: 0 auto;
@@ -30,18 +37,36 @@
 
     .layout_image_about {
         img {
-            border-radius: 15px;
+            -webkit-border-radius: 15px;
+               -moz-border-radius: 15px;
+                    border-radius: 15px;
         }
     }
 }
 
 .sponsors {
-    align-items: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+       -moz-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+       -moz-box-orient: vertical;
+       -moz-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     width: 100%;
     .logos {
+        display: -ms-grid;
         display: grid;
+        -ms-grid-columns: 250px 0px 250px 0px 250px 0px 250px;
         grid-template-columns: repeat(4, 250px);
         justify-items: center;
         gap: 15px 0px;
@@ -53,10 +78,28 @@
 
     #join {
         background-color: #D9D9D9;
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -moz-box;
+        display: -ms-flexbox;
         display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-        align-items: center;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -webkit-flex-direction: column;
+           -moz-box-orient: vertical;
+           -moz-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-pack: space-evenly;
+        -webkit-justify-content: space-evenly;
+           -moz-box-pack: space-evenly;
+            -ms-flex-pack: space-evenly;
+                justify-content: space-evenly;
+        -webkit-box-align: center;
+        -webkit-align-items: center;
+           -moz-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
         text-align: center;
 
         h4 {
@@ -79,11 +122,19 @@
 }
 
 .desktop_layout {
+    display: -webkit-box !important;
+    display: -webkit-flex !important;
+    display: -moz-box !important;
+    display: -ms-flexbox !important;
     display: flex !important;
 }
 
 @media screen and (max-width: 767px) { 
     .mobile_layout {
+        display: -webkit-box !important;
+        display: -webkit-flex !important;
+        display: -moz-box !important;
+        display: -ms-flexbox !important;
         display: flex !important;
     }
 
@@ -96,9 +147,21 @@
     }
 
     .layout_image_about {
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -moz-box;
+        display: -ms-flexbox;
         display: flex;
-        align-items: center;
-        justify-content: center;
+        -webkit-box-align: center;
+        -webkit-align-items: center;
+           -moz-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
+        -webkit-box-pack: center;
+        -webkit-justify-content: center;
+           -moz-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
         img {
             width: 396px;
             height: 231px;
@@ -111,6 +174,7 @@
     }
 
     .logos {
+        -ms-grid-columns: 125px 20px 125px !important;
         grid-template-columns: repeat(2, 125px) !important;
         gap: 20px !important;
     }
