--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -1,26 +1,79 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: since 2010
+*/
+
 footer {
     width: 100%;
     background-color: var(--background-white);
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+       -moz-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+       -moz-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+       -moz-box-orient: vertical;
+       -moz-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
 
     .parent_footer {
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -moz-box;
+        display: -ms-flexbox;
         display: flex;
-        flex-direction: row;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+        -webkit-flex-direction: row;
+           -moz-box-orient: horizontal;
+           -moz-box-direction: normal;
+            -ms-flex-direction: row;
+                flex-direction: row;
         width: 1280px;
         margin: 80px auto 0;
         position: relative;
-        justify-content: center;
-        align-items: center;
+        -webkit-box-pack: center;
+        -webkit-justify-content: center;
+           -moz-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        -webkit-box-align: center;
+        -webkit-align-items: center;
+           -moz-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
 
         .insta_footer {
+            display: -webkit-box;
+            display: -webkit-flex;
+            display: -moz-box;
+            display: -ms-flexbox;
             display: flex;
             background-color: var(--black);
             padding: 20px;
-            border-radius: 50%;
-            transform: translateX(-50%) rotateZ(355deg);
+            -webkit-border-radius: 50%;
+               -moz-border-radius: 50%;
+                    border-radius: 50%;
+            -webkit-transform: translateX(-50%) rotateZ(355deg);
+               -moz-transform: translateX(-50%) rotateZ(355deg);
+                -ms-transform: translateX(-50%) rotate(355deg);
+                 -o-transform: translateX(-50%) rotateZ(355deg);
+                    transform: translateX(-50%) rotateZ(355deg);
             
         }
 
@@ -29,18 +82,46 @@ footer {
             width: 91px;
             background-color: var(--black);
             padding: 25px;
-            border-radius: 25%;
-            justify-content: center;
-            align-items: center;
+            -webkit-border-radius: 25%;
+               -moz-border-radius: 25%;
+                    border-radius: 25%;
+            -webkit-box-pack: center;
+            -webkit-justify-content: center;
+               -moz-box-pack: center;
+                -ms-flex-pack: center;
+                    justify-content: center;
+            -webkit-box-align: center;
+            -webkit-align-items: center;
+               -moz-box-align: center;
+                -ms-flex-align: center;
+                    align-items: center;
+            display: -webkit-box;
+            display: -webkit-flex;
+            display: -moz-box;
+            display: -ms-flexbox;
             display: flex;
-            transform: translateX(50%) rotateZ(9deg);
+            -webkit-transform: translateX(50%) rotateZ(9deg);
+               -moz-transform: translateX(50%) rotateZ(9deg);
+                -ms-transform: translateX(50%) rotate(9deg);
+                 -o-transform: translateX(50%) rotateZ(9deg);
+                    transform: translateX(50%) rotateZ(9deg);
         }
 
         .text_footer {
             font-family: 'Swomun', serif;
             position: relative;
+            display: -webkit-box;
+            display: -webkit-flex;
+            display: -moz-box;
+            display: -ms-flexbox;
             display: flex;
-            flex-direction: column;
+            -webkit-box-orient: vertical;
+            -webkit-box-direction: normal;
+            -webkit-flex-direction: column;
+               -moz-box-orient: vertical;
+               -moz-box-direction: normal;
+                -ms-flex-direction: column;
+                    flex-direction: column;
             line-height: 1;
 
             #saison {
@@ -66,9 +147,21 @@ footer {
         font-family: 'Roboto', sans-serif;
         width: 1280px;
         margin: 64px auto 16px;
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -moz-box;
+        display: -ms-flexbox;
         display: flex;
-        align-items: center;
-        justify-content: center;
+        -webkit-box-align: center;
+        -webkit-align-items: center;
+           -moz-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
+        -webkit-box-pack: center;
+        -webkit-justify-content: center;
+           -moz-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
        a {
         text-decoration: none;
         color: black;
