--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -1,9 +1,18 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: since 2010
+*/
+
 * {
     margin: 0;
     padding: 0;
     border-width: 0;
     border-color: red;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
 }
 
 .title_class {
@@ -50,13 +59,21 @@
         }
         a {
             color: var(--primary-color);
+            -webkit-transition: all 0.3s ease-in-out;
+            -o-transition: all 0.3s ease-in-out;
+            -moz-transition: all 0.3s ease-in-out;
             transition: all 0.3s ease-in-out;
             padding: 0.5vw 1vw;
             border: 0.3vw solid var(--primary-color);
-            border-radius: 15px;
+            -webkit-border-radius: 15px;
+               -moz-border-radius: 15px;
+                    border-radius: 15px;
             &:hover {
                 text-decoration: underline;
                 color: var(--secondary-color);
+                -webkit-transition: all 0.3s ease-in-out;
+                -o-transition: all 0.3s ease-in-out;
+                -moz-transition: all 0.3s ease-in-out;
                 transition: all 0.3s ease-in-out;
                 border-color: var(--primary-color);
                 background-color: var(--primary-color);
@@ -64,7 +81,9 @@
         }
     }
     img {
-        border-radius: 15px;
+        -webkit-border-radius: 15px;
+           -moz-border-radius: 15px;
+                border-radius: 15px;
     }
 }
 
@@ -81,9 +100,21 @@ main {
 }
 
 .layout_image {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+       -moz-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+       -moz-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     margin: 20px 0;
 }
 
@@ -121,10 +152,16 @@ main {
     a{
         text-decoration: none;
         color: var(--electric-blue);
+        -webkit-transition: all 0.3s ease-in-out;
+        -o-transition: all 0.3s ease-in-out;
+        -moz-transition: all 0.3s ease-in-out;
         transition: all 0.3s ease-in-out;
         
         &:hover {
             text-decoration: underline;
+            -webkit-transition: all 0.3s ease-in-out;
+            -o-transition: all 0.3s ease-in-out;
+            -moz-transition: all 0.3s ease-in-out;
             transition: all 0.3s ease-in-out;
         }
     }
