--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: since 2010
+*/
+
 #custom-header-bar {
     background-color: #f2f2f2;
     padding: 10px;
@@ -7,24 +14,54 @@
 
 .header-homepage {
     padding: 1vw 0;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+       -moz-box-orient: horizontal;
+       -moz-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-justify-content: space-around;
+        -ms-flex-pack: distribute;
+            justify-content: space-around;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+       -moz-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     background-color: transparent !important;
     position: fixed;
     width: 100%;
     z-index: 8;
+    -webkit-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
     top: 0;
 
     &>a>svg {
         fill: var(--white);
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -moz-box;
+        display: -ms-flexbox;
         display: flex;
-        align-items: center;
+        -webkit-box-align: center;
+        -webkit-align-items: center;
+           -moz-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
     }
 
     &.scrolled {
+        -webkit-transition: all 0.3s ease-in-out;
+        -o-transition: all 0.3s ease-in-out;
+        -moz-transition: all 0.3s ease-in-out;
         transition: all 0.3s ease-in-out;
         background-color: var(--white) !important;
 
@@ -34,6 +71,9 @@
 
         .menu-menu-principal-container {
                     a {
+                        -webkit-transition: all 0.3s ease-in-out;
+                        -o-transition: all 0.3s ease-in-out;
+                        -moz-transition: all 0.3s ease-in-out;
                         transition: all 0.3s ease-in-out;
                         color: var(--black);
                         font-size: 18px;
@@ -42,10 +82,28 @@
             }
 
     ul {
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -moz-box;
+        display: -ms-flexbox;
         display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+        -webkit-flex-direction: row;
+           -moz-box-orient: horizontal;
+           -moz-box-direction: normal;
+            -ms-flex-direction: row;
+                flex-direction: row;
+        -webkit-box-pack: justify;
+        -webkit-justify-content: space-between;
+           -moz-box-pack: justify;
+            -ms-flex-pack: justify;
+                justify-content: space-between;
+        -webkit-box-align: center;
+        -webkit-align-items: center;
+           -moz-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
         height: 100%;
     }
 
@@ -61,10 +119,28 @@
 }
 
 .menu-menu-principal-container {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
     display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+        -webkit-flex-direction: row;
+           -moz-box-orient: horizontal;
+           -moz-box-direction: normal;
+            -ms-flex-direction: row;
+                flex-direction: row;
+        -webkit-box-pack: justify;
+        -webkit-justify-content: space-between;
+           -moz-box-pack: justify;
+            -ms-flex-pack: justify;
+                justify-content: space-between;
+        -webkit-box-align: center;
+        -webkit-align-items: center;
+           -moz-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
         height: 100%;
 }
 
@@ -73,14 +149,19 @@
     width: 100%;
     white-space: nowrap;
     overflow: hidden;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
 }
 #custom-header-bar p {
     display: inline-block;
     text-transform: uppercase;
 
     &:hover {
-        animation-play-state: paused;
+        -webkit-animation-play-state: paused;
+           -moz-animation-play-state: paused;
+             -o-animation-play-state: paused;
+                animation-play-state: paused;
     }
 
 }
@@ -102,9 +183,16 @@
         text-transform: uppercase;
         position: absolute;
         color: white;
-        writing-mode: tb-rl;
-        transform: rotate(-180deg);
-        text-orientation: mixed;
+        -webkit-writing-mode: tb-rl;
+            -ms-writing-mode: tb-rl;
+                writing-mode: tb-rl;
+        -webkit-transform: rotate(-180deg);
+           -moz-transform: rotate(-180deg);
+            -ms-transform: rotate(-180deg);
+             -o-transform: rotate(-180deg);
+                transform: rotate(-180deg);
+        -webkit-text-orientation: mixed;
+                text-orientation: mixed;
         margin: 0;
         padding: 0;
         top: 50px;
@@ -139,10 +227,26 @@
 .content {
     .top_header {
 
+        display: -webkit-box;
+
+        display: -webkit-flex;
+
+        display: -moz-box;
+
+        display: -ms-flexbox;
+
         display: flex;
-        flex-direction: row;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+        -webkit-flex-direction: row;
+           -moz-box-orient: horizontal;
+           -moz-box-direction: normal;
+            -ms-flex-direction: row;
+                flex-direction: row;
         width: 100%;
-        justify-content: space-around;
+        -webkit-justify-content: space-around;
+            -ms-flex-pack: distribute;
+                justify-content: space-around;
 
         .title_header {
             h2 {
@@ -157,9 +261,21 @@
         }
 
         .state_header {
+            display: -webkit-box;
+            display: -webkit-flex;
+            display: -moz-box;
+            display: -ms-flexbox;
             display: flex;
-            justify-content: center;
-            align-items: center;
+            -webkit-box-pack: center;
+            -webkit-justify-content: center;
+               -moz-box-pack: center;
+                -ms-flex-pack: center;
+                    justify-content: center;
+            -webkit-box-align: center;
+            -webkit-align-items: center;
+               -moz-box-align: center;
+                -ms-flex-align: center;
+                    align-items: center;
 
             p {
                 color: black;
@@ -174,7 +290,9 @@
 
     .horaires {
         background-color: var(--back-rdv);
-        border-radius: 15px;
+        -webkit-border-radius: 15px;
+           -moz-border-radius: 15px;
+                border-radius: 15px;
 
         h3 {
             color: white !important;
@@ -187,10 +305,28 @@
         }
         .grid_horaires {
             margin-top: 25px;
+            display: -webkit-box;
+            display: -webkit-flex;
+            display: -moz-box;
+            display: -ms-flexbox;
             display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
+            -webkit-box-orient: vertical;
+            -webkit-box-direction: normal;
+            -webkit-flex-direction: column;
+               -moz-box-orient: vertical;
+               -moz-box-direction: normal;
+                -ms-flex-direction: column;
+                    flex-direction: column;
+            -webkit-box-pack: center;
+            -webkit-justify-content: center;
+               -moz-box-pack: center;
+                -ms-flex-pack: center;
+                    justify-content: center;
+            -webkit-box-align: center;
+            -webkit-align-items: center;
+               -moz-box-align: center;
+                -ms-flex-align: center;
+                    align-items: center;
             padding: 0 25px 25px;
             gap: 10px;
 
@@ -204,14 +340,32 @@
             }
 
             .row {
+                display: -webkit-box;
+                display: -webkit-flex;
+                display: -moz-box;
+                display: -ms-flexbox;
                 display: flex;
-                flex-direction: row;
+                -webkit-box-orient: horizontal;
+                -webkit-box-direction: normal;
+                -webkit-flex-direction: row;
+                   -moz-box-orient: horizontal;
+                   -moz-box-direction: normal;
+                    -ms-flex-direction: row;
+                        flex-direction: row;
                 gap: 8px;
                 width: 100%;
-                align-items: baseline;
+                -webkit-box-align: baseline;
+                -webkit-align-items: baseline;
+                   -moz-box-align: baseline;
+                    -ms-flex-align: baseline;
+                        align-items: baseline;
 
                 .bottom_line_horaires {
-                    flex-grow: 1;
+                    -webkit-box-flex: 1;
+                    -webkit-flex-grow: 1;
+                       -moz-box-flex: 1;
+                        -ms-flex-positive: 1;
+                            flex-grow: 1;
                     border-bottom: 1px dotted var(--white);
                 }
             }
@@ -220,17 +374,41 @@
     }
 
     .adresse, .mail {
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -moz-box;
+        display: -ms-flexbox;
         display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -webkit-flex-direction: column;
+           -moz-box-orient: vertical;
+           -moz-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-pack: center;
+        -webkit-justify-content: center;
+           -moz-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        -webkit-box-align: center;
+        -webkit-align-items: center;
+           -moz-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
         background-color: var(--back-rdv);
-        border-radius: 15px;
+        -webkit-border-radius: 15px;
+           -moz-border-radius: 15px;
+                border-radius: 15px;
         margin-top: 20px;
         padding: 25px 0;
 
         svg {
-            transform: rotateZ(0);
+            -webkit-transform: rotateZ(0);
+               -moz-transform: rotateZ(0);
+                -ms-transform: rotate(0);
+                 -o-transform: rotateZ(0);
+                    transform: rotateZ(0);
         }
 
         p {
@@ -257,7 +435,9 @@
         background-color: #F0F0F0;
         padding: 20px;
         margin-top: 25px;
-        border-radius: 15px;
+        -webkit-border-radius: 15px;
+           -moz-border-radius: 15px;
+                border-radius: 15px;
         font-family: 'Roboto', sans-serif;
 
         label {
@@ -272,7 +452,9 @@
             width: 90%;
             margin: 0 auto;
             height: 40px;
-            border-radius: 10px;
+            -webkit-border-radius: 10px;
+               -moz-border-radius: 10px;
+                    border-radius: 10px;
             border: 1px solid #909090;
             padding-left: 10px;
             margin-bottom: 35px;
@@ -282,7 +464,9 @@
             width: 90%;
             margin: 0 auto;
             height: 150px;
-            border-radius: 10px;
+            -webkit-border-radius: 10px;
+               -moz-border-radius: 10px;
+                    border-radius: 10px;
             border: 1px solid #909090;
             padding: 10px;
             margin-bottom: 35px;
@@ -292,8 +476,18 @@
 
         p:last-of-type {
             width: 100%;
+            display: -webkit-box;
+            display: -webkit-flex;
+            display: -moz-box;
+            display: -ms-flexbox;
             display: flex;
-            flex-direction: row-reverse;
+            -webkit-box-orient: horizontal;
+            -webkit-box-direction: reverse;
+            -webkit-flex-direction: row-reverse;
+               -moz-box-orient: horizontal;
+               -moz-box-direction: reverse;
+                -ms-flex-direction: row-reverse;
+                    flex-direction: row-reverse;
         }
 
         input[type=submit]{
@@ -305,7 +499,9 @@
             letter-spacing: 0.44px;
             word-wrap: break-word;
             padding: 10px 15px;
-            border-radius: 25px;
+            -webkit-border-radius: 25px;
+               -moz-border-radius: 25px;
+                    border-radius: 25px;
 
             &:hover {
                 cursor: pointer;
@@ -337,8 +533,16 @@
     position: fixed;
     top: 0;
     left: 0;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: flex-start;
+    -webkit-box-pack: start;
+    -webkit-justify-content: flex-start;
+       -moz-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
     overflow: hidden;
     height: 76px;
     z-index: 99;
@@ -351,13 +555,31 @@
             white-space: nowrap;
             padding: 0 2vw;
             letter-spacing: 1px;
-            animation: marquee 5s linear infinite;
+            -webkit-animation: marquee 5s linear infinite;
+               -moz-animation: marquee 5s linear infinite;
+                 -o-animation: marquee 5s linear infinite;
+                    animation: marquee 5s linear infinite;
             
         }
     
+      @-webkit-keyframes marquee {
+        0% { -webkit-transform: translateX(0); transform: translateX(0); }
+        100% { -webkit-transform: translateX(-100%); transform: translateX(-100%); }
+      }
+    
+      @-moz-keyframes marquee {
+        0% { -moz-transform: translateX(0); transform: translateX(0); }
+        100% { -moz-transform: translateX(-100%); transform: translateX(-100%); }
+      }
+    
+      @-o-keyframes marquee {
+        0% { -o-transform: translateX(0); transform: translateX(0); }
+        100% { -o-transform: translateX(-100%); transform: translateX(-100%); }
+      }
+    
       @keyframes marquee {
-        0% { transform: translateX(0); }
-        100% { transform: translateX(-100%); }
+        0% { -webkit-transform: translateX(0); -moz-transform: translateX(0); -o-transform: translateX(0); transform: translateX(0); }
+        100% { -webkit-transform: translateX(-100%); -moz-transform: translateX(-100%); -o-transform: translateX(-100%); transform: translateX(-100%); }
       }
 }
 
@@ -388,22 +610,52 @@
     height: 100%;
     background-color: var(--white);
     z-index: 99;
-    transform: translateX(110%);
+    -webkit-transform: translateX(110%);
+       -moz-transform: translateX(110%);
+        -ms-transform: translateX(110%);
+         -o-transform: translateX(110%);
+            transform: translateX(110%);
+    -webkit-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
     overflow-y: scroll;
 
     &.open {
-        transform: translateX(0%);
+        -webkit-transform: translateX(0%);
+           -moz-transform: translateX(0%);
+            -ms-transform: translateX(0%);
+             -o-transform: translateX(0%);
+                transform: translateX(0%);
+        -webkit-transition: all 0.3s ease-in-out;
+        -o-transition: all 0.3s ease-in-out;
+        -moz-transition: all 0.3s ease-in-out;
         transition: all 0.3s ease-in-out;
         overflow: visible;
-        box-shadow: 0 0 0 10000px rgba(0,0,0,.50);
+        -webkit-box-shadow: 0 0 0 10000px rgba(0,0,0,.50);
+           -moz-box-shadow: 0 0 0 10000px rgba(0,0,0,.50);
+                box-shadow: 0 0 0 10000px rgba(0,0,0,.50);
     }
 
     .menu-menu-principal-container {
         margin-top: 20px;
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -moz-box;
+        display: -ms-flexbox;
         display: flex;
-        flex-direction: column;
-        align-items: center;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -webkit-flex-direction: column;
+           -moz-box-orient: vertical;
+           -moz-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-align: center;
+        -webkit-align-items: center;
+           -moz-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
         color: var(--black);
 
         a {
